feat: made a bunch of changes for a web version

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -2,12 +2,12 @@
 
 name="Mac OSX"
 platform="Mac OSX"
-runnable=true
+runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/osx/Wol.dmg"
+export_path="export/osx/WolEditor.dmg"
 script_export_mode=1
 script_encryption_key=""
 
@@ -16,21 +16,21 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 application/name="Wol Editor"
-application/info="Wol Editor: a editor for Yarn and Wol files"
+application/info="Wol Editor: an editor for Yarn and Wol files"
 application/icon=""
 application/identifier="works.dingelstad.bram.woleditor"
 application/signature=""
 application/app_category="Developer-tools"
-application/short_version="1.0"
-application/version="1.0"
-application/copyright="© Bram Dingelstad"
+application/short_version="alpha2"
+application/version="alpha2"
+application/copyright="MIT License: Bram Dingelstad, kyperbelt, Secret Labs"
 display/high_res=true
 privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
-codesign/enable=false
-codesign/identity=""
+codesign/enable=true
+codesign/identity="WolEditor"
 codesign/timestamp=false
-codesign/hardened_runtime=false
+codesign/hardened_runtime=true
 codesign/replace_existing_signature=false
 codesign/entitlements/custom_file=""
 codesign/entitlements/allow_jit_code_execution=false
@@ -45,7 +45,7 @@ codesign/entitlements/calendars=false
 codesign/entitlements/photos_library=false
 codesign/entitlements/apple_events=false
 codesign/entitlements/debugging=false
-codesign/entitlements/app_sandbox/enabled=false
+codesign/entitlements/app_sandbox/enabled=true
 codesign/entitlements/app_sandbox/network_server=false
 codesign/entitlements/app_sandbox/network_client=false
 codesign/entitlements/app_sandbox/device_usb=false
@@ -56,8 +56,8 @@ codesign/entitlements/app_sandbox/files_music=0
 codesign/entitlements/app_sandbox/files_movies=0
 codesign/custom_options=PoolStringArray(  )
 notarization/enable=false
-notarization/apple_id_name=""
-notarization/apple_id_password=""
+notarization/apple_id_name="bram.dingelstad+apple@pm.me"
+notarization/apple_id_password="?00f493b9945fDDB7Fb!"
 notarization/apple_team_id=""
 texture_format/s3tc=true
 texture_format/etc=false
@@ -97,3 +97,69 @@ progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
 progressive_web_app/background_color=Color( 0, 0, 0, 1 )
+
+[preset.2]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="export/windows/WolEditor.exe"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+codesign/enable=false
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
+application/icon=""
+application/file_version="alpha2"
+application/product_version="alpha2"
+application/company_name="Dingelstad Works"
+application/product_name="Wol Editor"
+application/file_description=""
+application/copyright="MIT: Bram Dingelstad, kyperbelt, Secret Labs"
+application/trademarks=""
+
+[preset.3]
+
+name="Linux/X11"
+platform="Linux/X11"
+runnable=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="export/linux/WolEditor"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
